# otc-sphinx-directives

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  zuul.yaml
api-ref/source/: conf.py
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/examples/: card_item.rst  container_item.rst  directives.rst  directives_bd.rst  directives_docsportal.rst  directives_ecs_internal.rst  index.rst  popular_services.rst  service_based_view.rst  service_card_link.rst  service_navigator.rst
doc/source/service_card/: index.rst  obs.rst  obs_clean.rst
otc_directives/: __init__.py  directive_wrapper.py  otc_directives_setup.py  service_card.py  service_card_wrapper.py
otc_directives/directive_wrapper/: __init__.py
otc_directives/service_card/: __init__.py  service_card.py
otc_sphinx_directives/: article_author.py  card_item.py  container_item.py  directive_wrapper.py  docs_link.py  docsportal.py  navigator.py  otc_sphinx_directives_setup.py  popular_services.py  service_card.py  service_card_link.py  service_group.py  service_navigator.py
otc_sphinx_directives/tests/: base.py  test_directive_wrapper.py  test_service_card.py
otc_sphinx_directives/tests/templates/directive_wrapper/: conf.py  index.rst
otc_sphinx_directives/tests/templates/service_card/: conf.py  index.rst
