[metadata]
name = otc_directives
summary = Open Telekom Cloud Sphinx Directives
description_file =
    README.md
author = Open Telekom Cloud
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    OpenStack, Open Telekom Cloud, OTC, T-Systems, Telekom, Sphinx

[files]
packages =
    otc_directives
